# qt-multiplatform-example

./: CMakeLists.txt  README.md  build.sh
.cmake/: arm-phytec-linux-gnueabi-gcc-toolchain.cmake  helpers.cmake  x86_64-linux-gcc-toolchain.cmake
.devcontainer/: Dockerfile  devcontainer.json
.qtcreator/: cmaketools.xml  debuggers.xml  profiles.xml  setup-qtcreator-kits.sh
app/: CMakeLists.txt
app/control/: CMakeLists.txt  main.cpp
app/ui/: CMakeLists.txt
app/ui/src/: CMakeLists.txt  main.cpp
cmake/: arm-phytec-linux-gnueabi-gcc-toolchain.cmake  gcc-linux-toolchain.cmake  helpers.cmake  x86_64-linux-clang-toolchain.cmake
lib/: CMakeLists.txt
lib/device_lib/: CMakeLists.txt
lib/device_lib/include/: ConcreteDevice.hpp  IDevice.hpp
lib/device_lib/mock/: CMakeLists.txt  MockDevice.hpp
lib/device_lib/src/: CMakeLists.txt  ConcreteDevice.cpp
lib/device_lib/test/: CMakeLists.txt  test_ConcreteDevice.cpp
lib/device_lib/test/mock/: CMakeLists.txt
lib/module_lib/: CMakeLists.txt
lib/module_lib/include/: Module.hpp
lib/module_lib/src/: CMakeLists.txt  Module.cpp
lib/module_lib/test/: CMakeLists.txt  MockDevice.hpp  test_Module.cpp
lib/my_lib/: CMakeLists.txt
lib/my_lib/src/: CMakeLists.txt
lib/my_lib/test/: CMakeLists.txt  test_ConcreteDevice.cpp
projects/: CMakeLists.txt
projects/firmware/: CMakeLists.txt
projects/firmware/src/: CMakeLists.txt  main.cpp  main.qml
projects/integrationTests/: CMakeLists.txt
projects/integrationTests/testControl/: CMakeLists.txt  main.cpp
projects/integrationTests/testControl/src/: CMakeLists.txt
tests/: CMakeLists.txt
